// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple example initialValues should override model default values 1`] = `
Object {
  "emails": Array [
    "Olefirenk@gmail.com",
  ],
  "employed": false,
  "flavor": Array [],
  "hobbies": Array [
    Object {
      "createdAt": 2022-05-29T00:00:00.000Z,
      "hobbyId": 1,
      "hobbyName": "Dev",
    },
  ],
  "login": "Alex",
  "password": "Password",
  "sause": "",
}
`;

exports[`simple example initialize from model 1`] = `
Object {
  "emails": Array [
    "olefirenk@gmail.com",
  ],
  "employed": false,
  "flavor": Array [],
  "hobbies": Array [],
  "login": "login",
  "password": "password",
  "sause": "",
}
`;
